tests/snapshots/snapshots__snapshot_completion_with_parts_content.snap
---
source: tests/snapshots.rs
expression: "post_body(json!({\n    \"model\": \"mock-gpt-4o\", \"messages\":\n    [{\n        \"role\": \"user\", \"content\": [{ \"type\": \"text\", \"text\": PLAIN_PROMPT }]\n    }]\n})).await"
---
{
  "choices": [
    {
      "finish_reason": "stop",
      "index": 0,
      "message": {
        "content": "All good here.",
        "refusal": null,
        "role": "assistant"
      }
    }
  ],
  "created": 1753719198,
  "frequency_penalty": 0.0,
  "id": "chatcmpl-185fddaff1d04a1e859a79b3",
  "model": "mock-gpt-4o",
  "object": "chat.completion",
  "presence_penalty": 0.0,
  "request_id": "req_185fddaff1d04a1e3df3a934859a79b3",
  "service_tier": "default",
  "system_fingerprint": "fp_aff1d04a1e",
  "temperature": 1.0,
  "top_p": 1.0,
  "usage": {
    "completion_tokens": 4,
    "prompt_tokens": 2,
    "total_tokens": 6
  }
}
