tests/snapshots/snapshots__snapshot_completion_with_token_cap.snap
---
source: tests/snapshots.rs
expression: "post_body(json!({\n    \"model\": \"mock-gpt-4o\", \"max_completion_tokens\": 3, \"messages\":\n    [{ \"role\": \"user\", \"content\": UNICODE_PROMPT }]\n})).await"
---
{
  "choices": [
    {
      "finish_reason": "length",
      "index": 0,
      "message": {
        "content": "café",
        "refusal": null,
        "role": "assistant"
      }
    }
  ],
  "created": 1751322024,
  "frequency_penalty": 0.0,
  "id": "chatcmpl-a0a1dc8035db73a8f0001b35",
  "model": "mock-gpt-4o",
  "object": "chat.completion",
  "presence_penalty": 0.0,
  "request_id": "req_a0a1dc8035db73a8fb5a905ff0001b35",
  "service_tier": "default",
  "system_fingerprint": "fp_8035db73a8",
  "temperature": 1.0,
  "top_p": 1.0,
  "usage": {
    "completion_tokens": 3,
    "prompt_tokens": 2,
    "total_tokens": 5
  }
}
