tests/snapshots/snapshots__snapshot_malformed_body_error.snap
---
source: tests/snapshots.rs
expression: pretty(&text)
---
{
  "error": {
    "code": null,
    "message": "Failed to parse the request body as JSON: EOF while parsing an object at line 1 column 1",
    "param": null,
    "type": "invalid_request_error"
  }
}
