tests/snapshots/snapshots__snapshot_plain_completion.snap
---
source: tests/snapshots.rs
expression: post_body(body(PLAIN_PROMPT)).await
---
{
  "choices": [
    {
      "finish_reason": "stop",
      "index": 0,
      "message": {
        "content": "All good here.",
        "refusal": null,
        "role": "assistant"
      }
    }
  ],
  "created": 1743458097,
  "id": "chatcmpl-fa907a5109fba3b1c73a6c2c",
  "model": "gpt-4o-mini",
  "object": "chat.completion",
  "service_tier": "default",
  "system_fingerprint": "fp_5109fba3b1",
  "usage": {
    "completion_tokens": 4,
    "prompt_tokens": 2,
    "total_tokens": 6
  }
}
