tests/snapshots/snapshots__snapshot_refusal_completion.snap
---
source: tests/snapshots.rs
expression: post_body(body(REFUSAL_PROMPT)).await
---
{
  "choices": [
    {
      "finish_reason": "content_filter",
      "index": 0,
      "message": {
        "content": null,
        "refusal": "I'm sorry, but I can't help with that request.",
        "role": "assistant"
      }
    }
  ],
  "created": 1736543229,
  "id": "chatcmpl-6dfde7ac1ba25cfdb0cf3ba5",
  "model": "gpt-4o-mini",
  "object": "chat.completion",
  "service_tier": "default",
  "system_fingerprint": "fp_ac1ba25cfd",
  "usage": {
    "completion_tokens": 0,
    "prompt_tokens": 4,
    "total_tokens": 4
  }
}
