tests/snapshots/snapshots__snapshot_tool_call_completion.snap
---
source: tests/snapshots.rs
expression: post_body(body(TOOL_PROMPT)).await
---
{
  "choices": [
    {
      "finish_reason": "tool_calls",
      "index": 0,
      "message": {
        "content": null,
        "refusal": null,
        "role": "assistant",
        "tool_calls": [
          {
            "function": {
              "arguments": "{\"city\":\"Berlin\",\"unit\":\"celsius\"}",
              "name": "get_weather"
            },
            "id": "call_alpha",
            "type": "function"
          },
          {
            "function": {
              "arguments": "{\"city\":\"Tokyo\",\"unit\":\"celsius\"}",
              "name": "get_weather"
            },
            "id": "call_beta",
            "type": "function"
          }
        ]
      }
    }
  ],
  "created": 1762838484,
  "frequency_penalty": 0.0,
  "id": "chatcmpl-1d8ae51b039025d4256310d9",
  "model": "gpt-4o-mini",
  "object": "chat.completion",
  "presence_penalty": 0.0,
  "request_id": "req_1d8ae51b039025d49510a179256310d9",
  "service_tier": "default",
  "system_fingerprint": "fp_1b039025d4",
  "temperature": 1.0,
  "top_p": 1.0,
  "usage": {
    "completion_tokens": 0,
    "prompt_tokens": 6,
    "total_tokens": 6
  }
}
