tests/snapshots/snapshots__snapshot_unicode_completion.snap
---
source: tests/snapshots.rs
expression: post_body(body(UNICODE_PROMPT)).await
---
{
  "choices": [
    {
      "finish_reason": "stop",
      "index": 0,
      "message": {
        "content": "café 🚀👍 👩‍💻 你好世界 done",
        "refusal": null,
        "role": "assistant"
      }
    }
  ],
  "created": 1748641420,
  "id": "chatcmpl-a2bacc9e0712328c1ec33bed",
  "model": "gpt-4o-mini",
  "object": "chat.completion",
  "service_tier": "default",
  "system_fingerprint": "fp_9e0712328c",
  "usage": {
    "completion_tokens": 22,
    "prompt_tokens": 2,
    "total_tokens": 24
  }
}
