tests/snapshots/snapshots__snapshot_unknown_model_error.snap
---
source: tests/snapshots.rs
expression: pretty(&text)
---
{
  "error": {
    "code": "model_not_found",
    "message": "The model 'nope' does not exist or you do not have access to it.",
    "param": "model",
    "type": "invalid_request_error"
  }
}
