tests/snapshots/snapshots__snapshot_unknown_route_error.snap
---
source: tests/snapshots.rs
expression: pretty(&text)
---
{
  "error": {
    "code": "unknown_url",
    "message": "Unknown request URL: /v1/nope. Please check the URL for typos.",
    "param": null,
    "type": "invalid_request_error"
  }
}
